--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<svg width="26px" height="26px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M19 10C19 13.9765 12 21 12 21C12 21 5 13.9765 5 10C5 6.02355 8.13401 3 12 3C15.866 3 19 6.02355 19 10Z" stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path><circle cx="12" cy="10" r="3" stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></circle></g></svg>
 				        		</div>
-				        		<div class="text pl-3">
+				        		<div class="text pr-3">
 					            <p><span>آدرس:</span> وحیدیه، جنب اداره آب وحیدیه</p>
 					          </div>
 				          </div>
@@ -79,7 +79,7 @@
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<span class="fa fa-phone"></span>
 				        		</div>
-				        		<div class="text pl-3">
+				        		<div class="text pr-3">
 					            <p><span>تلفن ۱:</span> <span href="tel://09104803834">۰۹۱۰۴۸۰۳۸۳۴</span></p>
 					          </div>
 				          </a>
@@ -87,7 +87,7 @@
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<span class="fa fa-phone"></span>
 				        		</div>
-				        		<div class="text pl-3">
+				        		<div class="text pr-3">
 					            <p><span>تلفن ۲:</span> <span href="tel://09300331341">۰۹۳۰۰۳۳۱۳۴۱</span></p>
 					          </div>
 				          </a>
@@ -95,7 +95,7 @@
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="24px" height="24px" fill-rule="nonzero"><g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M16,4h-8c-2.209,0 -4,1.791 -4,4v8c0,2.209 1.791,4 4,4h8c2.209,0 4,-1.791 4,-4v-8c0,-2.209 -1.791,-4 -4,-4zM12,16c-2.209,0 -4,-1.791 -4,-4c0,-2.209 1.791,-4 4,-4c2.209,0 4,1.791 4,4c0,2.209 -1.791,4 -4,4z" opacity="0.3"></path><path d="M16,3h-8c-2.757,0 -5,2.243 -5,5v8c0,2.757 2.243,5 5,5h8c2.757,0 5,-2.243 5,-5v-8c0,-2.757 -2.243,-5 -5,-5zM19,16c0,1.654 -1.346,3 -3,3h-8c-1.654,0 -3,-1.346 -3,-3v-8c0,-1.654 1.346,-3 3,-3h8c1.654,0 3,1.346 3,3z"></path><path d="M12,7c-2.757,0 -5,2.243 -5,5c0,2.757 2.243,5 5,5c2.757,0 5,-2.243 5,-5c0,-2.757 -2.243,-5 -5,-5zM12,15c-1.654,0 -3,-1.346 -3,-3c0,-1.654 1.346,-3 3,-3c1.654,0 3,1.346 3,3c0,1.654 -1.346,3 -3,3zM17,6c-0.55228,0 -1,0.44772 -1,1c0,0.55228 0.44772,1 1,1c0.55228,0 1,-0.44772 1,-1c0,-0.55228 -0.44772,-1 -1,-1z"></path></g></g></svg>
 				        		</div>
-				        		<div class="text pl-3">
+				        		<div class="text pr-3">
 					            <p><span>اینستاگرام:</span> <span href="https://www.instagram.com/tokyo.yadak.nadr123?igsh=MXI2bzcxMWF2YXBxag==">tokyo.yadak.nadr123</span></p>
 					          </div>
 				          </a>
